--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -1696,7 +1696,7 @@
       },
       "outputs": [],
       "source": [
-        "model.save('Stock Predictions Model.h5')"
+        "model.save('Stock Predictions Model.keras')"
       ]
     }
   ],
